# fatcat-scholar

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CONDUCT.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.build  LICENSE.md  Makefile  Pipfile  README.md  TODO.txt  ci.requirements.txt  dev.requirements.txt  pyproject.toml  pytest.ini  pytype.cfg  requirements.txt  settings.toml
extra/docker/: Dockerfile.test-base  docker-compose.yml
extra/docker/elasticsearch/: Dockerfile
extra/i18n/: README.md  babel.cfg  web_interface.pot
extra/sitemap/: .gitignore  README.md  access_urls_query.sh  generate_sitemap_indices.py  pdf_urls_query.sh  transform_access_url.py  update_prod.sh  work_urls_query.sh
extra/www_placeholder/: index.html  robots.txt
fatcat_scholar/: api_entities.py  config.py  djvu.py  es_transform.py  grobid2json.py  hacks.py  identifiers.py  issue_db.py  kafka.py  query_citation.py  query_fatcat.py  query_parse.py  sandcrawler.py  schema.py  search.py  sim_pipeline.py  transform.py  web.py  web_hacks.py  work_pipeline.py  worker.py
fatcat_scholar/static/: robots.allow.txt  robots.disallow.txt  scholar-semantic-ui.v2.4.2.min.css  scholar.css
fatcat_scholar/templates/: about.html  access_404.html  base.html  help.html  home.html  search.html  search_macros.html  work.html
fatcat_scholar/translations/ar/LC_MESSAGES/: messages.mo  messages.po
fatcat_scholar/translations/cs/LC_MESSAGES/: messages.po
fatcat_scholar/translations/de/LC_MESSAGES/: messages.mo  messages.po
notes/: 202009_refs_dump.txt  2021-12_sim_update.md  2021-12_works.md  2021_webpage_size.txt  2022-01_sitemap.md  2022-12_bulk_index.md  2023-05_refcat_v3_derivation.md  background_reading.md  fatcat_sim_intersection.md  indexing_pipeline.md  issue_db.md  plan.txt  production_deployment.md  scaling_works.md
proposals/: 2020-05-11_microfilm_indexing_pipeline.md  2020-05-11_web_interface.md  2020-05-16_fatcat_indexing_pipeline.md  2020-10-20_kafka_update_pipeline.md  2021-02-15_ui_updates.md  2021-04-28_indexability.md  2021_crude_query_parse.md  2022-03-25_search_rss_feed.md  2022-XX-XX_landing_pages.md  kafka_update_pipeline.md  overview.md  work_schema.md
schema/: README.md  fulltext_schema.v01.json  issue_db.sql  scholar_fulltext.v01.json
scripts/: qa_scholar_index.sh
src/fatcat_scholar/: __init__.py  __main__.py  biblio_hacks.py  djvu.py  issue_db.py  schema.py  sim_pipeline.py  web.py  web_hacks.py  work_pipeline.py
src/fatcat_scholar/static/: robots.allow.txt
src/fatcat_scholar/templates/: error.html
src/scholar/: api_entities.py  config.py  depends.py  djvu.py  identifiers.py  issue_db.py  kafka.py  query_citation.py  query_fatcat.py  query_parse.py  sandcrawler.py  schema.py  search.py  sim_pipeline.py  transform.py  web.py  web_hacks.py  work_pipeline.py  worker.py
src/scholar/cat/: entity_helpers.py  forms.py  graphics.py  web.py
src/scholar/fatcat/: entity_helpers.py  hacks.py  web.py
src/scholar/static/: scholar-semantic-ui.v2.4.2.min.css  sitemap.xml
src/scholar/templates/: about.html  access_404.html  base.html  help.html  home.html  search.html  search_macros.html
tests/: conftest.py  test_deps.py  test_djvu_parse.py  test_grobid2json.py  test_grobid_parse.py  test_issue_db.py  test_refs_transform.py  test_scrub.py  test_transform.py  test_web.py  test_web_search.py  test_work_pipeline.py
tests/cat/: changelog_views.py  editgroup_views.py  entity_views.py  refs.py  routes.py  web_entity_views.py
tests/cat/files/: elastic_container_search.json
tests/fatcat/: changelog_views.py  editgroup_views.py  entity_views.py  refs.py  routes.py
tests/fatcat/files/: elastic_container_browse_no_params.json  elastic_release_search.json
tests/files/: ERIC_ED441501_djvu.xml  elastic_fulltext_get.json  elastic_fulltext_search.json  elastic_get_work_a6gvpil4brdgzhqyaog3ftngqe.json  elastic_get_work_ao5l3ykgbvg2vfpqe2y5qold5y.json  example_crossref_record.json  example_grobid.tei.xml  release_hsmo6p4smrganpb3fndaj2lon4.json  release_hsmo6p4smrganpb3fndaj2lon4_sans.json  sim_collections.json  sim_items.json  sim_page_bundle.json  work_iarm6swodra2bcrzhxrfaah7py_bundle.json
(+136 files in other folders)
