[build-system]
requires = ["setuptools==69.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar"
description = "Internet Archive Scholar"
dependencies = [ 
  "aiofiles==23.1.0",
  "babel==2.12.1",
  "beautifulsoup4 == 4.11.2",
  "confluent-kafka == 2.0.2",
  "dynaconf == 3.1.12",
  # <7.14 pin is because of elasticsearch.exceptions.UnsupportedProductError
  "elasticsearch == 7.13.4",
  "elasticsearch-dsl == 7.4.1",
  "fastapi==0.94.1",
  "fastapi-rss==0.1.3",
  "fatcat-openapi-client==0.5.0",
  "ftfy==6.1.1",
  "fuzzycat==0.1.19",
  "grobid-tei-xml==0.1.3",
  "gunicorn==20.1.0",
  "httptools==0.5.0",
  "internetarchive==3.3.0",
  "jinja2==3.1.2",
  "lxml==4.9.2",
  "minio==6.0.2",
  "pycountry==19.8.18",
  "pydantic==1.10.6",
  "pylatexenc==2.10",
  "python-stdnum==1.18",
  # might need this...pytz==2022.7.1; python_version < '3.9'
  "requests==2.28.2",
  "sentry-sdk==1.17.0",
  "starlette-prometheus==0.9.0",
  "toml==0.10.2",
  "typer==0.9.0",
  "uvicorn==0.21.1",
  "uvloop==0.17.0",
  "httpx==0.23.3",
]
version = "0.1.0"
authors = [
    {name = "Nate Smith", email = "nsmith@archive.org"},
]
readme = "README.md"
license = {text = "AGPL3"}

[project.optional-dependencies]
#build = ["pyinstaller==6.3.0", "pip-tools==7.3.0",]
dev = [
  "black==23.1.0",
  "ipython==8.11.0",
  "mypy==1.1.1",
  "typing-extensions==4.5.0",
  "flake8==6.0.0",
  "flake8-annotations==3.0.0",
  "isort==5.12.0",
  "pytest==7.2.2",
  "pytest-cov==4.0.0",
  "pytest-mock==3.10.0",
  "responses==0.23.1",
  "types-babel==2.11.0.11",
  "types-beautifulsoup4==4.11.6.7",
  "types-requests==2.28.11.15",
]
build = ["pyinstaller==6.3.0", "pip-tools==7.3.0",]
