[build-system]
requires = ["setuptools==69.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar"
description = "Internet Archive Scholar"
dependencies = [ 
  "babel==2.12.1",
  "beautifulsoup4 == 4.11.2",
  "confluent-kafka == 2.0.2",
  "dynaconf == 3.2.3",
  # <7.14 pin is because of elasticsearch.exceptions.UnsupportedProductError
  "elasticsearch == 7.13.4",
  "elasticsearch-dsl == 7.4.1",
  "fastapi==0.109.2",
  "fastapi-rss==0.2.2",
  "fatcat-openapi-client==0.5.0",
  "ftfy==6.1.1",
  "fuzzycat==0.1.19",
  "grobid-tei-xml==0.1.3",
  "gunicorn==20.1.0",
  "httptools==0.5.0",
  "internetarchive==3.3.0",
  "jinja2==3.1.3",
  "lxml==4.9.2",
  "minio==6.0.2",
  "pycountry==19.8.18",
  "pydantic==1.10.6",
  "pylatexenc==2.10",
  "python-stdnum==1.18",
  # might need this...pytz==2022.7.1; python_version < '3.9'
  "requests==2.31.0",
  "sentry-sdk==1.17.0",
  "starlette-prometheus==0.9.0",
  "toml==0.10.2",
  "uvicorn==0.21.1",
  "uvloop==0.17.0",
  "httpx==0.23.3",
]
version = "0.2.6"
authors = [
    {name = "Nate Smith", email = "nsmith@archive.org"},
    {name = "Martin Czygan", email = "martin@archive.org"},
    {name = "Bryan Newbold"},
]
readme = "README.md"
license = {text = "AGPL3"}

[project.optional-dependencies]
dev = [
  "ipython==8.11.0",
  "mypy==1.1.1",
  "typing-extensions==4.8.0",
  "pytest==7.2.2",
  "pytest-cov==4.0.0",
  "pytest-mock==3.10.0",
  "responses==0.23.1",
  "types-babel==2.11.0.11",
  "types-beautifulsoup4==4.11.6.7",
  "types-requests==2.28.11.15",
  "pip-tools==7.3.0",
  "ruff==0.2.1",
  "pip-audit==2.7.0",
]

[tool.ruff]
target-version="py311"
# I set line-length but it's not being enforced because I became infuriated at
# the inability to disable for commented lines and string literals. I refuse to
# painstakingly noqa all of those.
line-length=99
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
]

[tool.ruff.lint]
select = ["C","E","F","W","ANN"]
# ANN003 is annotation on, eg, **kwargs
# ANN101 is annotation on 'self'
# ANN204 is annotation on '__init__()'
# ANN401 is 'Any' in type annotations
# E265,E266 are restrictions on comments ('#')
ignore = ["C901", "ANN003", "ANN101", "ANN204", "ANN401", "E265", "E266", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402", "ANN201", "ANN001"]
